gitlab/minio/minio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-minio-svc
  namespace: public-service
  labels:
    app: gitlab
    component: minio
spec:
  type: ClusterIP
  ports:
    - name: service
      port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: gitlab
    component: minio
